# rust_snippet_repo

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cspell.json  rust_snippet_repo.code-workspace
examples/: traits.rs
examples/jello-vm-rs/: LICENSE  Main.java  Makefile  README.md  main.rs
examples/jello-vm-rs/test/: general.java  nop_def.java  print_double.java  print_float.java  print_int.java  print_long.java  print_str.java
src/: exec_mode.rs  main.rs  run_one.rs
src/modes/: do_asm_get_rip.rs  lambda_moved.rs  lambda_ref.rs  mod.rs  print_dl_addr_info.rs  ptr_meta_run.rs  read_main_ptr.rs
src/support/: mod.rs
src/support/l/: arg_parser.rs  asm.rs  async_vec.rs  box_.rs  check_vtable_size_of.rs  cmd_arg.rs  constants.rs  debug_location_value.rs  debug_str_ref.rs  describe.rs  drop_helpers.rs  elf_base.rs  find_next_object.rs  get_command_line_arguments.rs  get_debug_flag_state.rs  get_location.rs  get_str_ref.rs  get_type.rs  handle_current_object.rs  ignore_template_macro.rs  internal_types.rs  is_cached_offset.rs  is_location_str.rs  is_str_ref_like.rs  iter_find_next_object.rs  iter_type.rs  loop_branch_1.rs  loop_branch_2.rs  loop_branch_3.rs  loop_branch_4.rs  loop_inner_1.rs  loop_inner_3.rs  loop_state.rs  mark_offset_hit.rs  metadata.rs  mod.rs  p_dbg.rs  parsed_args.rs  print_debug_state.rs  ptr_iter.rs  (+9 more)
src/support/s/: mod.rs
src/support/s/disabled_code/: addr_of_dyn_send.rs  describe.rs  drop_helpers.rs  mod.rs  typename.rs  vec.rs
tmp/: code.md
