[package]
name = "rust_snippet_repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []
code_gen = []

[dependencies]
bitflags = "1.3"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"

[profile.release-with-debug]
inherits = "release"
debug = true
